--- a/ServiceFabricApp/AlarmService/App.config
+++ b/ServiceFabricApp/AlarmService/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+  </startup>
   <runtime>
     <gcServer enabled="true" />
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -12,4 +12,21 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    
+    <client>
+      <endpoint address="net.tcp://localhost:10059/IEventService" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IEventService" name="EventServiceEndpoint" />
+    </client>
+
+    <behaviors>
+      <serviceBehaviors>
+        <behavior name="AlarmService.ServiceBehavior">
+          <serviceMetadata httpGetEnabled="false" />
+          <serviceThrottling maxConcurrentCalls="1000" maxConcurrentSessions="1000" maxConcurrentInstances="1000" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+        </behavior>
+      </serviceBehaviors>
+    </behaviors>
+
+  </system.serviceModel>
 </configuration>
