SCADA cloud service implementation

--- a/NMSSelfHost/App.config
+++ b/NMSSelfHost/App.config
@@ -68,7 +68,7 @@
         </identity>
       </endpoint>
 
-      <endpoint address="net.tcp://localhost:10055/NDS" binding="netTcpBinding" contract="TransactionManagerContracts.IModelUpdateContract" name="NDS">
+      <endpoint address="net.tcp://localhost:10055/IModelUpdateContract" binding="netTcpBinding" contract="TransactionManagerContracts.IModelUpdateContract" name="NDS">
         <identity>
           <dns value="localhost"/>
         </identity>
