--- a/NetworkDynamicService/App.config
+++ b/NetworkDynamicService/App.config
@@ -42,7 +42,7 @@
         <endpoint address="" binding="netTcpBinding" contract="TransactionManagerContracts.IModelUpdateContract" />
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:10055/NDS" />
+            <add baseAddress="net.tcp://localhost:10055/IModelUpdateContract" />
           </baseAddresses>
         </host>
       </service>
