--- a/ServiceFabricApp/CommandingManagementService/App.config
+++ b/ServiceFabricApp/CommandingManagementService/App.config
@@ -12,4 +12,17 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <system.serviceModel>
+    <client>
+      <endpoint address="net.tcp://localhost:7001/Pub" binding="netTcpBinding" contract="PubSubCommon.IPub" name="PublisherEndPoint" />
+      <endpoint address="net.tcp://localhost:20005/IPointUpdateService" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IPointUpdateService" name="UpdatePointEndPoint" />
+      <endpoint address="net.tcp://localhost:10058/IAlarmEventService" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IAlarmEventService" name="AlarmEventServiceEndPoint" />
+      <endpoint address="net.tcp://localhost:10002/IFEPCommandingServiceContract" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IFEPCommandingServiceContract" name="FEPCommandingService" />
+      <endpoint address="net.tcp://localhost:50000/IRealTimeCacheService" binding="netTcpBinding" contract="ScadaCommon.Interfaces.IRealTimeCacheService" name="RealTimeCacheProxy" />
+      <endpoint address="net.tcp://localhost:10059/IMeasurementRepository" binding="netTcpBinding" contract="RepositoryCore.Interfaces.IMeasurementRepository" name="MeasurementServiceProxy" />
+    </client>
+  </system.serviceModel>
+  
+  
 </configuration>
