--- a/ServiceFabricApp/DynamicDataProccessorService/App.config
+++ b/ServiceFabricApp/DynamicDataProccessorService/App.config
@@ -12,4 +12,12 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
+  <system.serviceModel>
+    <client>
+      <endpoint address="net.tcp://localhost:7001/Pub" binding="netTcpBinding" contract="PubSubCommon.IPub" name="PublisherEndPoint" />
+      <endpoint address="net.tcp://localhost:10058/IAlarmEventService" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IAlarmEventService" name="AlarmEventServiceEndPoint" />
+      <endpoint address="net.tcp://localhost:10059/IMeasurementRepository" binding="netTcpBinding" contract="RepositoryCore.Interfaces.IMeasurementRepository" name="MeasurementServiceProxy" />
+    </client>
+  </system.serviceModel>
 </configuration>
