Configuration change for Master

--- a/NMSSelfHost/App.config
+++ b/NMSSelfHost/App.config
@@ -41,7 +41,7 @@
         </endpoint>
         <host>
           <baseAddresses>
-            <add baseAddress="net.tcp://localhost:10001/NetworkModelService/GDA/" />
+            <add baseAddress="net.tcp://localhost:10008/ModelUpdateNMS" />
           </baseAddresses>
         </host>
       </service>
