--- a/NMSSelfHost/NMSSelfHost.csproj
+++ b/NMSSelfHost/NMSSelfHost.csproj
@@ -36,6 +36,9 @@
     <ApplicationIcon>servicesconfig_servicios_6119.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\..\..\MasterProjectScada\NetworkModelService\bin\Debug\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
