CE and NMS Eventing

--- a/ServiceFabricApp/CalculationEngine/App.config
+++ b/ServiceFabricApp/CalculationEngine/App.config
@@ -21,6 +21,7 @@
   <system.serviceModel>
     <client>
       <endpoint address="net.tcp://localhost:10022/ICommandingServiceContract" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.ICommandingServiceContract" name="CECommandingProxy" />
+      <endpoint address="net.tcp://localhost:10059/EventService/EventServices" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IEventService" name="EventServiceEndpoint" />
     </client>
 
     <bindings>
