--- a/ServiceFabricApp/NetworkModelService/App.config
+++ b/ServiceFabricApp/NetworkModelService/App.config
@@ -29,7 +29,10 @@
 					<dns value="localhost" />
 				</identity>
 			</endpoint>
-		</client>
+
+      <endpoint address="net.tcp://localhost:10059/EventService/EventServices" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IEventService" name="EventServiceEndpoint" />
+
+    </client>
 
 		<bindings>
 			<netTcpBinding>
