AlarmEvent uri fix

--- a/ServiceFabricApp/AlarmService/App.config
+++ b/ServiceFabricApp/AlarmService/App.config
@@ -16,7 +16,7 @@
   <system.serviceModel>
 
     <client>
-      <endpoint address="net.tcp://localhost:10059/IEventService" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IEventService" name="EventServiceEndpoint" />
+      <endpoint address="net.tcp://localhost:10059/EventService/EventServices" binding="netTcpBinding" contract="ScadaCommon.ServiceContract.IEventService" name="EventServiceEndpoint" />
     </client>
 
   </system.serviceModel>
